Lekce 05 more pictures

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -115,6 +115,41 @@
 \includegraphics[width=0.95\textwidth]{hazard_ctrl2.pdf}
 \end{frame}
 
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{cpu_branch_pred.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{cpu_final_design.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{cpu_design.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{cpu_design2.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{cpu_design3.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
+\includegraphics[width=0.45\textwidth]{fig/timing_clk.png}
+
+\includegraphics[width=0.45\textwidth]{fig/timing_clk3.png}
+\hfill 
+\includegraphics[width=0.45\textwidth]{fig/timing_clk2.png}
+
+\end{frame}
+
 
 
 
