--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -113,7 +113,7 @@ Paměť :
 \begin{itemize}
 \item buňky mají shodnou šíři - většinou 8 bitů (byte) nebo jejich násobek
 \end{itemize}
-\item velikost fyzického adresového prostoru je omezena počtem bitů adresy, kterou je CPU schopno nastavit na paměťové sběrnici, tedy kolik bitů lze použít k adresování paměti
+\item velikost fyzického adresového prostoru je omezena počtem bitů adresy, kterou je CPU schopno nastavit na paměťové sběrnici, tedy kolik bitů lze použít k adresování paměti. Pro organizaci po bytech pak
 \begin{itemize}
 \item 16 bitů adresy umožňuje maximálně 64KiB velkou paměť
 \item 32 bitů adresy umožňuje maximálně 4GiB velkou paměť
@@ -161,8 +161,8 @@ Paměti dělíme podle možností zápisu na:
 
 Paměti lze dělit i podle toho, zda data jsou uchována po vypnutí napájení:
 \begin{itemize}
-\item \textbf{Permanentní} (Non-volatile) paměť nepotřebuje k udržení informace napájení - např. 3D-X Point -- Intel Optane Memory, feromagnetické paměti, HDD, SSD, 
-\item \textbf{Volatilní} (Volatile) například paměť DDR v klasickém počítači, k udržení informace je potřeba nepřetržité napájení a obnova dat.
+\item \textbf{Permanentní} (Non-volatile) paměť nepotřebuje k udržení informace napájení - např. Flash, EEPROM, EPROM, ROM, feromagnetické paměti, HDD, SSD, 3D-X Point -- Intel Optane Memory
+\item \textbf{Volatilní} (Volatile) například paměť DDR SDRAM, SRAM, cache v klasickém počítači, k udržení informace je potřeba nepřetržité napájení a obnova dat.
 \end{itemize}
 \end{frame}
 
@@ -338,7 +338,7 @@ Princip se využívá jak v algoritmech (lokální proměnné), kompilátorech (
 
 \begin{itemize}
 \item \textbf{Cache hit} (zásah) pojmenování situace, kdy požadovaná hodnota ve skryté paměti (cache) je.
-\item \textbf{Cache miss}, opak. Není tam.
+\item \textbf{Cache miss}, opak, \textbf{výpadek}, data v cache ještě nejsou.
 \item \textbf{Cache line} (řádka) nebo \textbf{Cache block} – základní kopírovatelná jednotka mezi hierarchickými úrovněmi. 
 \item V praxi se velikost \textbf{Cache} Line pohybuje od 8B do 1KB, typicky 64B.
 \item \textbf{Hit rate} -- počet paměťových přístupů obsloužených danou úrovní cache dělený všemi přístupy
@@ -485,9 +485,244 @@ set = (adresa div BS) mod SN
 \end{frame}
 
 \begin{frame}
-\frametitle{TBD}
+\frametitle{Ukázka: QtRvSim vect-inc, vect-add2, vect-add}
+
 \end{frame}
 
+\begin{frame}
+\frametitle{Vliv velikosti a organizace cache na počty výpadků}
+
+{
+\centering
+
+\includegraphics[width=0.65\linewidth]{fig/cache-size-vs-ways.png}
+
+}
+
+\begin{itemize}
+\item miss rate není vlastnost, parameter cache
+\item miss rate není vlastnost programu
+\end{itemize}
+
+Jedná se o kombinaci jak algoritmů v programu, tak parametrů cache a často i zpracovávaných dat.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Vliv velikosti bloku a celé cache na počty výpadků}
+
+{
+\centering
+
+\includegraphics[width=0.75\linewidth]{fig/cache-size-vs-block.png}
+
+}
+
+Zvětšení velikosti bloku napomáhá načtení sousedních dat, která mohou být často následně potřeba.
+Ale pokud tomu tak není, tak se zvyšuje cache miss penalty a zároveň dochází častěji ke kolizím
+a obsazení cache nepotřebnými daty.
+
+\end{frame}
+
+\section{Virtuální paměť a stránkování}
+
+\begin{frame}
+\frametitle{Paměťové prostory procesů a odkládání na disk}
+
+Více procesů, každý vlastní paměťový prostor. Vzájemná ochrana
+a možnost rozšíření kapacity hlavní paměti o prostor na sekundární -- swap.
+
+{
+\centering
+
+\includegraphics[width=0.80\linewidth]{paging-to-disc.pdf}
+
+}
+
+Překlad po jednotlivých bytech by byl drahý, prostor je rozdělěný na~stránky
+(zarovnané), typicky 4\,kB, někdy i větší, např. 64\,kB.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Překlad virtuální a fyzické adresy}
+
+Překlad překlad zajišťuje \textbf{Memory Management Unit} (MMU).
+
+Pro po vyplnění stránkovacích tabulek a nastavení \textbf{Page Directory Base Register}
+(PDBR) operačním systémem probíhá překlad na stránky přítomné v paměti většinou automaticky.
+
+Naopak výpadky stránek ošetřují rutiny operačního systému. Pokud je přístup do namapované
+oblasti, načtou data z disku, sítě, odkládacího oddílu.
+
+Stějně jako u cache je zde nutné a náročné hledat prostor pro nově potřebné stránky (princip podobný LRU).
+
+\vskip 2mm
+
+{
+\centering
+
+\includegraphics[width=0.80\linewidth]{paging-cpu-mm-mem.pdf}
+
+}
+\end{frame}
+
+\begin{frame}
+\frametitle{Jednoúrovňová stránkovací tabulka}
+
+{
+\centering
+
+\includegraphics[width=0.80\linewidth]{paging-1-level.pdf}
+
+}
+
+Řešení je nevýhodné, pro každý, i malý, spuštěný proces je na 32-bitovém
+systému pro 4\,kB stránky potřeba alokovat 4\,MB (překlad 20-bitů adresy,
+4-byte na 32-bit položku) 
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Dvouúrovňové stránkování}
+
+{
+\centering
+
+\includegraphics[width=0.75\linewidth]{paging-2-levels.pdf}
+
+}
+
+Adresář stránek pro každý proces, úroveň tabulek s vlastními položekami
+se alokuje jen, když je daná oblast virtuálního prostoru použitá.
+
+Za pozornost stojí, že při překladu po 10-ti bitech vychází pole položek
+adresáře i tabulky na velikost 4\,kB. Nepotřebuje aloace vyššího řádu
+ohrožené fragmentací.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Položky adresářů stránek -- \textbf{Page Directory Entry} (PDE) }
+
+{
+\centering
+
+\includegraphics[width=0.90\linewidth]{paging-pde-1.pdf}
+
+}
+
+\vskip 2mm
+
+\begin{itemize}
+\item bit 0: Present bit -- další úroveň nebo stránka je přítomná v paměti (1). Pokud není (0) tak jsou data uložena na disku nebo oblast není mapovaná. Někdy také bit označovaný V -- valid bit.
+\item bit 1: Read/Write: 1 -- R/W -- zápis povolený; 0 -- read only (RO)
+\item bit 2: User/Supervisor: 1 -- přístupné uživateli; 0 -- přístup jen operační systém
+\item bit 3: Write-through/Write-back -- nastavení typu přístupu
+\item bit 4: Cache disabled/enabled -- důležité pro paměťově mapované periferie, přímý přístup do registrů bez cache
+\item bit 5: Accessed -- nastaven MMU při prvním přístupu z procesoru
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Položky koncových tabulek -- \textbf{Page Table Entry} (PTE)}
+
+{
+\centering
+
+\includegraphics[width=0.90\linewidth]{paging-pte.pdf}
+
+}
+
+\vskip 2mm
+
+\begin{itemize}
+\item bit 6: Dirty bit, případně někdy Modified – jen nastavený MMU, pokud došlo k zápisu do dané stránky od poslední kontroly a případného nulování příznaku operačním systémem.
+\item Ostatní bity mají stejný význam jako v položce adresáře
+\end{itemize}
+
+Bit \textbf{Accessed} je klíčový, když operační systém hledá stránky fyzické paměti k uvolnění.
+Obvykle počítá podle bitů další, obsáhlejší, statistiku a při průchodu seznamem bity nuluje.
+Pokud je nastavený \textbf{Dirty}, tak je při uvolnění fyzciké stránky (PFN) je nutné data
+sychronizovat zpět do~souboru, odkládacího oddílu atd.
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Překlad na 64-bitových architekturách}
+
+{
+\centering
+
+\includegraphics[width=0.90\linewidth]{fig/address-trans-4-levels.png}
+
+}
+
+Vyžaduje více úrovní. Pro 64-bitů a 4\,kB stránky je teoreticky
+potřeba přeložit 52-bitů. Pokud jednotlivé části tabulek mají
+zaplnit jednu stránku, tak vychází překlad na 9\,bitů ($512 \times 8 = 4096$)
+na úroveň a tedy $ceil(52 / 9) = 6$. Často se ale jedna až dvě úrovně vynechávají, více později.
+
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Zrychlení opakovaného překladu}
+
+Každý překlad představuje několik přístupů do~paměti a i když je urychlený
+přístupy přes cache, tak zpomaluje. Zavádí se \textbf{Translation Look-Aside Buffer} (TLB).
+Pracuje na shodném principu jako paměťová cache, ale ukládá k virtuální adrese
+její překlad na~fyzickou. Opět omezená kapacita, LRU a~nutnost brát v~potaz
+při~programování.
+
+\vskip 2mm
+
+{
+\centering
+
+\includegraphics[width=0.80\linewidth]{paging-tlb.pdf}
+
+}
+\end{frame}
+
+\section{Cache a stránkování dohromady}
+
+\begin{frame}
+\frametitle{Paměťový subystém - Intel Nehalem}
+
+{
+\centering
+
+\includegraphics[width=0.80\linewidth]{fig/mem-nehalem-lat.png}
+
+}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Stránkování na 64-bitových architekturách}
+
+Plná 64-bitová délka fyzické adresy nemá (zatím) použití.
+Aní 64-bitová virtuální adresa. Úrovně zpomalují běh.
+Nejvyšší bity se nahrazují znaménkvým rozšířením.
+Horní oblast operační systém, spodní pro aplikace.
+Další optimalizace volitelné velké stránky -- huge pages.
+
+{
+\centering
+
+\includegraphics[width=0.6\linewidth]{paging-canonical-64-bit.pdf}
+
+}
+\end{frame}
+
+\begin{frame}
+\frametitle{Prostor na poznámky}
+
+\end{frame}
 
 \end{document}
 
