Lecture 04 - add reference to What every programmer should know about memory

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -657,7 +657,7 @@ sychronizovat zpět do~souboru, odkládacího oddílu atd.
 {
 \centering
 
-\includegraphics[width=0.90\linewidth]{fig/address-trans-4-levels.png}
+\includegraphics[width=0.90\linewidth]{address-trans-4-levels.pdf}
 
 }
 
@@ -717,6 +717,18 @@ Další optimalizace volitelné velké stránky -- huge pages.
 \includegraphics[width=0.6\linewidth]{paging-canonical-64-bit.pdf}
 
 }
+\end{frame}
+
+\begin{frame}
+\frametitle{Odkazy a literatura}
+
+\begin{itemize}
+\item Ulrich Drepper: \href{https://lwn.net/Articles/250967/}{What every programmer should know about memory}
+\item Agner Fog: \href{https://www.agner.org/optimize/}{Software optimization resources. C++ and assembly}
+\item \url{https://www.7-cpu.com/cpu/Haswell.html}
+\item \url{https://www.7-cpu.com/cpu/Skylake.html}
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}
