Lecture 04 - add reference to AMD Zen at WikiChips

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -727,6 +727,8 @@ Další optimalizace volitelné velké stránky -- huge pages.
 \item Agner Fog: \href{https://www.agner.org/optimize/}{Software optimization resources. C++ and assembly}
 \item \url{https://www.7-cpu.com/cpu/Haswell.html}
 \item \url{https://www.7-cpu.com/cpu/Skylake.html}
+\item WikiChips: \href{https://en.wikichip.org/wiki/amd/microarchitectures/zen}{Zen - Microarchitectures - AMD}
+
 \end{itemize}
 
 \end{frame}
