Lekce 05 4 qtrvsim png changed to svg

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -41,12 +41,12 @@
 
 \begin{frame}
 \frametitle{Todo}
-\includegraphics[width=0.95\textwidth]{fig/hazard-qtrvsim.png}
+\includegraphics[width=0.95\textwidth]{hazard_qtrvsim.pdf}
 \end{frame}
 
 \begin{frame}
 \frametitle{Todo}
-\includegraphics[width=0.95\textwidth]{fig/hazard-stall-qtrvsim.png}
+\includegraphics[width=0.95\textwidth]{hazard_stall_qtrvsim.pdf}
 \end{frame}
 
 
@@ -67,12 +67,12 @@
 
 \begin{frame}
 \frametitle{Todo}
-\includegraphics[width=0.95\textwidth]{fig/hazard-forwarding.png}
+\includegraphics[width=0.95\textwidth]{hazard_forwarding.pdf}
 \end{frame}
 
 \begin{frame}
 \frametitle{Todo}
-\includegraphics[width=0.95\textwidth]{fig/hazard-forwarding2.png}
+\includegraphics[width=0.95\textwidth]{hazard_forwarding2.png}
 \end{frame}
 
 \begin{frame}
