Lekce 05 small typo

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -72,7 +72,7 @@
 
 \begin{frame}
 \frametitle{Todo}
-\includegraphics[width=0.95\textwidth]{hazard_forwarding2.png}
+\includegraphics[width=0.95\textwidth]{hazard_forwarding2.pdf}
 \end{frame}
 
 \begin{frame}
