Lekce 05 forwarding converted to svg

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -77,6 +77,11 @@
 
 \begin{frame}
 \frametitle{Todo}
+\includegraphics[width=0.95\textwidth]{hazard_forwarding3.pdf}
+\end{frame}
+
+\begin{frame}
+\frametitle{Todo}
 \includegraphics[width=0.95\textwidth]{pipeline_stall.pdf}
 \end{frame}
 
