Lecture 04 - typo reported by Jan Hruby
Closes #5, #6

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -259,7 +259,7 @@ MC - Memory controller -- paměťový kontrolér zajišťuje řízení čtení a
 \item \textbf{DDR5 SDRAM} -- 1.1V, až 6.4 GT/s
 \end{itemize}
 
-Všechny tyto druhy jsou převážně optializované na propustnost, nikoliv náhodný přístup, latence 20 až 35 ns.
+Všechny tyto druhy jsou převážně optimalizované na propustnost, nikoliv náhodný přístup, latence 20 až 35 ns.
 
 \end{frame}
 
